# ST0830-O.S.Project

./: CMakeLists.txt
Steno/: byteType.h  commandList.c  commandList.h  constants.h  list.c  list.h  main.c  manageFile.c  manageFile.h  stenography.c  stenography.h  utilities.c  utilities.h
